# rentiqDevOps

./: .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  listing.py  neighborhood.py  prediction.py  utils.py
backend/app/routes/: model.py  neighborhoods.py  predictions.py
backend/app/services/: predictor.py
backend/scripts/: seed.py
data/: abias.csv  bairros_geocode.csv  center.csv  roca.csv  sape.csv
data/antigo/: abias.csv  center.csv  roca.csv  sape.csv
data/backup/: bairros_geocode.csv  roca copy.csv
frontend/: Dockerfile  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Footer.tsx  Header.tsx  PredictionForm.tsx  ResultCard.tsx
frontend/src/lib/: api.ts
models/: metrics.json  modelo_aluguel.pkl
pre_processing/: notebook.ipynb  pyproject.toml
scrapper/: README.md  pyproject.toml  scrapper.py
scrapper/scrapers/: __init__.py  abias.py  base.py  cardinali.py  center.py  roca.py  sape.py
scripts/: populate_cardinali_csv.py
